added processOrder functionality, updated db create / insert scripts, cleaned out unneeded routes for paymentRoutes
